bizquest.com (archived on 2004-12-08)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 5000,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.77,
  "homepage_snapshot_redirected_domain": "bizquest.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001004119id_/http://www.bizquest.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001004119id_/http%3A//bizquest.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "bizquest.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041208020828id_/http%3A//www.bizquest.com/support/privacy_policy.asp",
  "policy_title": "Business for Sale | Buy A Business or Sell A Business | Privacy Policy - BizQuest.com",
  "policy_url": "bizquest.com/support/privacy_policy.asp",
  "sha1": "0433e3cf95558b3917114236da6e32b90f2ecccd",
  "simhash": 17233993379747644179,
  "simhash_updated": true,
  "site_hostname": "bizquest.com",
  "site_url": "http://bizquest.com",
  "smog": 13.24,
  "strict_updated": true,
  "timestamp": "20041208020828",
  "word_count": 815,
  "year": 2004
}

--- a/b/bi/biz/bizquest.com.html
+++ b/b/bi/biz/bizquest.com.html
@@ -1,110 +1,126 @@
-<!--The following is the downloaded HTML source of the bizquest.com privacy policy that was archived on 2004-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040624034228id_/http%3A//bizquest.com/support/privacy_policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bizquest.com privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208020828id_/http%3A//www.bizquest.com/support/privacy_policy.asp) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
-	<title>bizquest.com</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html lang="en"><head>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	<meta name="keywords" content="business, for sale, buy, sell, small, company, companies, broker, brokers, bizquest">
+<meta name="description" content="BizQuest offers thousands of small business for sale listings. A comprehensive service for anyone looking to buy or sell a business, whether it is a franchise opportunity or a directory of brokers who can help with buying or selling a company.">
+	<title>Business for Sale | Buy A Business or Sell A Business | Privacy Policy - BizQuest.com</title>
+	<link rel="stylesheet" type="text/css" href="http://www.bizquest.com/_inc/_css/main.css">
+	<link rel="shortcut icon" href="http://www.bizquest.com/favicon.ico" type="image/x-icon">
+	<link rel="shortcut" href="http://www.bizquest.com/favicon.ico" type="image/x-icon">
+<script src="/_inc/window_self.js" type="text/javascript"></script></head>
 
-	<meta name="keywords" content="business for sale, buy a business, sell a business, buy a company, sell a company, company for sale, companies for sale, buy a small business, sell a small business, sell a small company, buy a small company, business broker, business intermediary, small business broker, small business for sale, sale of business, sale of company, sell my business, sell my company, sell your business, sell your company, business for sale by owner, company for sale by owner, business seller, business buyer, business to buy, business to sell, company to buy, company to sell, valuation, small business valuation, valuation planning, business appraisal, franchise opportunity, franchise for sale, franchise available, buy a franchise, sell a franchise, business acquisition, corporate acquisition, business sale advice, buy, bizop, sell, sale, broker, franchise, business-for-sale, for sale by owner">
-<meta name="description" content="Bizquest has thousands of small business for sale listings. We provide comprehensive services for anyone looking to buy a business or sell a business, including listings of businesses for sale, franchise and business opportunity listings, and directories of business brokers who can help with buying a business or selling a business.">
 
-<link href="/_inc/_css/main.css" rel="stylesheet" type="text/css">
 
-<script language="JavaScript" type="text/javascript">
-<!--
-if (window.top != window.self) 
- {
- window.top.location=window.self.location;
- }
--->
-</script>
-
-</head>
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 	<table border="0" cellspacing="0" cellpadding="0" width="100%">
 		<tbody><tr valign="bottom">
-			<td width="400"><a href="/" title="BizQuest - A Business For Sale Marketplace"><img src="/_img/nav/nav-logo_tagline.gif" width="400" height="40" alt="BizQuest - A Business For Sale Marketplace" border="0"></a></td>
+			<td width="400"><a href="http://www.bizquest.com/" title="BizQuest - A Business For Sale Marketplace"><img src="/_img/nav/nav-logo_tagline.gif" width="400" height="40" alt="BizQuest - A Business For Sale Marketplace" border="0"></a></td>
 			<td width="100%" align="right" style="padding: 5px;">
-				<nobr><a href="/resource/email_services.asp" class="navTopLink">Free Newsletter</a> | <a href="/broker/default.asp" class="navTopLink">Services For Business Brokers</a></nobr>
+			
+				<nobr><a href="http://www.bizquest.com/myaccount/" class="navTopLink">Log In or Register</a></nobr>
+			
 			</td>
 		</tr>
 	</tbody></table>
 	<table border="0" cellspacing="0" cellpadding="7" width="100%">
 		<tbody><tr>
 			
-			<td class="navTop"><nobr><a href="/default.asp">Home</a></nobr></td>
+			<td class="navTop"><nobr><a href="http://www.bizquest.com/" title="Home">Home</a></nobr></td>
 			
-			<td class="navTop"><nobr><a href="/buy/default.asp">Buy a Business</a></nobr></td>
+			<td class="navTop"><nobr><a href="http://www.bizquest.com/buy/" title="Buy A Business">Buy A Business</a></nobr></td>
 			
-			<td class="navTop"><nobr><a href="/sell/default.asp">Sell Your Business</a></nobr></td>
+			<td class="navTop"><nobr><a href="http://www.bizquest.com/sell/" title="Sell Your Business">Sell Your Business</a></nobr></td>
 			
-			<td class="navTop"><nobr><a href="/franchise/default.asp">Franchises</a></nobr></td>
+			<td class="navTop"><nobr><a href="http://www.bizquest.com/franchise/" title="Franchises">Franchises</a></nobr></td>
 			
-			<td class="navTop"><nobr><a href="/resource/default.asp">Tools &amp; Resources</a></nobr></td>
+			<td class="navTop"><nobr><a href="http://www.bizquest.com/resource/" title="Tools &amp; Resources">Tools &amp; Resources</a></nobr></td>
+			
+			<td class="navTop"><nobr><a href="http://www.bizquest.com/broker/" title="Services For Business Brokers">Services For Business Brokers</a></nobr></td>
 			
 			<td width="100%" class="navTop">&nbsp;</td>
-			
-			<td class="navTop"><nobr><a href="/myaccount/default.asp">Log In or Register</a></nobr></td>
-			
 		</tr>
 	</tbody></table>
-	
-<img src="/_img/s.gif" width="20" height="20" alt="" border="0">
-<table width="100%" border="0" cellspacing="0" cellpaping="0">
+	<div style="padding-left:10px;padding-right:10px;padding-top:10px;"><a href="http://www.bizquest.com/">Home</a> &gt; <strong>Privacy Policy</strong></div>
+<table width="100%" border="0" cellspacing="0" cellpadding="10">
 	<tbody><tr valign="top">
-	<td><img src="/_img/s.gif" width="20" height="10" alt="" border="0"></td>
-	<td><a href=""><img src="/_img/nav/subhead-about_bizquest.gif" width="470" height="25" alt="About BizQuest" border="0"></a>
+	<td>
 	
 <h1>Privacy Policy</h1>
 
-<p>Bizquest respects your privacy. Because we gather certain types of information from you, we feel it is important that you fully understand the terms and conditions under which we use the information we receive from you. We will never share personal information unless you elect to disclose it or otherwise as set forth in this Privacy Policy. Please read the following Privacy Policy to understand how your information will be treated as you make use of our services and products.
+<p>BizQuest respects your privacy. Because we gather certain types of information from you, we feel it is important that you fully understand the terms and conditions under which we use the information we receive from you. We will never share personal information unless you elect to disclose it or otherwise as set forth in this Privacy Policy. Please read the following Privacy Policy to understand how your information will be treated as you make use of our services and products.
 </p>
 
 <p>To maintain professional standards of confidentiality, we adhere to the following guidelines:</p>
 
 <h2>Guidelines</h2>
 
-<h3>What personally identifiable information does Bizquest collect from you, and how does Bizquest use the information?</h3>
-<p>Bizquest collects information necessary to permit you to utilize our service and product offerings. Information is gathered, among other times, when you elect to become a Registered User, list a business for sale, express interest in a listing you see or when you buy or use materials on the site. Bizquest also uses certain online order forms for products and services it sells that request certain apitional information, in particular financial information (such as a credit card number). All information provided by you will be stored in a secure manner. We also may collect survey information for research purposes. We do not sell, rent or barter information you provide.</p>
+<h3>What personally identifiable information does BizQuest collect from you, and how does BizQuest use the information?</h3>
+<p>BizQuest collects information necessary to permit you to utilize our service and product offerings. Information is gathered, among other times, when you elect to become a Registered User, list a business for sale, express interest in a listing you see or when you buy or use materials on the site. BizQuest also uses certain online order forms for products and services it sells that request certain apitional information, in particular financial information (such as a credit card number). All information provided by you will be stored in a secure manner. We also may collect survey information for research purposes. We do not sell, rent or barter information you provide.</p>
 <p></p>
 
 <h3>Who is collecting your information and with whom may your information be shared?</h3>
-<p>Bizquest uses the information collected from you in accordance with this Privacy Policy and the privacy policies of our partners. Information we collect is used to customize your experience on this site. We also show you content that we think is interesting, and display content according to your preferences. In order to provide you with co-branded services, it is often necessary to share your information with our partners. We may also use your information to send you promotional materials on Bizquest and its partners. We may use your information to contact you, if necessary. In apition, we may report aggregate information to our advertisers.
+<p>BizQuest uses the information collected from you in accordance with this Privacy Policy and the privacy policies of our partners. Information we collect is used to customize your experience on this site. We also show you content that we think is interesting, and display content according to your preferences. In order to provide you with co-branded services, it is often necessary to share your information with our partners. We may also use your information to send you promotional materials on BizQuest and its partners. We may use your information to contact you, if necessary. In apition, we may report aggregate information to our advertisers.
 </p>
 <p>
 To use our features, collected information is often shared with our partners. Information collected by us and our partners also may be shared with third parties that we select to customize your experience at our site. When you use a credit card at this site, your encrypted credit card information may be sent to our credit card processor.
 </p>
 <p>
-Bizquest also may disclose your information if required to do so by law, court order or as required by other governmental or legal entities.</p>
+BizQuest also may disclose your information if required to do so by law, court order or as required by other governmental or legal entities.</p>
 <p></p>
 
 <h3>What choices are available to you regarding collection, use, and distribution of your information?</h3>
-<p>You may receive information from time to time about Bizquest products and services, and the products and services of our partners. Bizquest believes that these updates are interesting and informative. If, however, you would rather not receive them, just let us know. You may do so by indicating that you do not want to receive such information at the time you become a Registered User, or just let us know if you so decide at a later time. Bizquest reserves the right to limit Registered Users to those who will provide the requested information and will accept our information.</p>
+<p>You may receive information from time to time about BizQuest products and services, and the products and services of our partners. BizQuest believes that these updates are interesting and informative. If, however, you would rather not receive them, just let us know. You may do so by indicating that you do not want to receive such information at the time you become a Registered User, or just let us know if you so decide at a later time. BizQuest reserves the right to limit Registered Users to those who will provide the requested information and will accept our information.</p>
 <p></p>
 
-<h3>What are cookies and how does Bizquest use them?</h3>
+<h3>What are cookies and how does BizQuest use them?</h3>
 <p>Cookies are small bits of code, usually stored on a user's computer hard drive, which enable a web site to "personalize" itself for each user. No other company has access to our cookies. We use "cookies" technology to reduce the time required for you to submit your requests. Cookies are not used by us to retrieve any information about you from your computer that you have not voluntarily given to us. Cookies also may be received when you link to our partners' sites or when you click on banner ads provided on our site. You can edit your browser to not accept cookies, but the features of our site may not function properly if you do not accept cookies.</p>
 <p></p>
 
-<h3>How does Bizquest protect your personal information?</h3>
+<h3>How does BizQuest protect your personal information?</h3>
 <p>For all our transactions, we employ reasonable and current Internet security methods and technologies. We password protect, use encryption techniques and install firewalls where appropriate. We strive to protect you. We encourage our participating service providers to adopt and honor their own consumer privacy policies. While we strive to protect your personal information, no system can be guaranteed. We cannot ensure or warrant the security of any information that you transmit to us. Once we receive your information, we use our best efforts to ensure its security on our systems.</p>
 <p></p>
 
 <h3>How can you access, update or delete your information?</h3>
-<p>At any time you may view, update and/or edit all of the information you have provided to Bizquest by logging in to "My Account" and following the appropriate instructions. Even if you delete or change some information, it may continue to be stored, for example, for archival purposes.</p>
+<p>At any time you may view, update and/or edit all of the information you have provided to BizQuest by logging in to "My Account" and following the appropriate instructions. Even if you delete or change some information, it may continue to be stored, for example, for archival purposes.</p>
 <p></p>
 
 <p></p>
 		</td>
-		<td><img src="/_img/s.gif" width="20" height="10" alt="" border="0"></td>
 	</tr>
 </tbody></table>
 
 
 
-<p class="navFooter" align="right" style="padding: 10px; border-top:1px solid #999999;"><a href="/default.asp?4">Home</a> | <a href="/support/contact.asp?4" class="navFooter">Contact Us</a> | <a href="/support/about.asp?4" class="navFooter">About Us</a> | <a href="/support/advertise.asp?4" class="navFooter">Advertise With Us</a> | <a href="/support/terms.asp?4" class="navFooter">Terms of Use</a> | <a href="/support/privacy_policy.asp?4" class="navFooter">Privacy Policy</a> | <a href="/support/directory/default.asp?4" class="navFooter">Directory</a> | <a href="/sitemap/index.html?4" class="navFooter">Site Map</a> | <br>Copyright © 2004 Bizquest, LLC. All Rights Reserved.</p>
+<p class="navFooter" align="right" style="padding: 10px; border-top:1px solid #999999;"><a href="http://www.bizquest.com/">Home</a> | <a href="http://www.bizquest.com/support/contact.asp" class="navFooter">Contact Us</a>  | <a href="http://www.bizquest.com/support/about.asp" class="navFooter">About Us</a>  | <a href="http://www.bizquest.com/support/advertise.asp" class="navFooter">Advertise With Us</a>  | <a href="http://www.bizquest.com/support/terms.asp" class="navFooter">Terms of Use</a>  | <a href="http://www.bizquest.com/support/privacy_policy.asp" class="navFooter">Privacy Policy</a>  | <a href="http://www.bizquest.com/support/directory/" class="navFooter">Directory</a>  | <a href="http://www.bizquest.com/sitemap/index.html" class="navFooter">Site Map</a> <br>Copyright 2004 Bizquest, LLC. All Rights Reserved.</p>
 
 <p></p>
+
+
+<!-- Google Conversion Code -->
+<script language="JavaScript">
+<!--
+google_conversion_id = 1072269807;
+google_conversion_language = "en_US";
+if (1) {
+  google_conversion_value = 1;
+}
+google_conversion_label = "PageView";
+-->
+</script>
+
+<div style="visibility: hidden;">
+<script language="JavaScript" src="http://www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<a href="http://services.google.com/sitestats/en_US.html" target="_blank">
+<img height=1 width=1 border=0 src="http://www.googleadservices.com/pagead/conversion/1072269807/?value=1&label=PageView&hl=en">
+</a>
+</noscript>
+</div>
+
+
 
 
 </body></html>
