citylink.com.au (archived on 2004-12-08)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 3475,
  "classifier_probability": 0.82,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.08,
  "homepage_snapshot_redirected_domain": "citylink.com.au",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040930223545id_/http://www.citylink.com.au/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040930223545id_/http%3A//citylink.com.au",
  "interval": "2004_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "citylink.com.au",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041208021016id_/http%3A//www.citylink.com.au/content/privacy/feature.asp%3FCC%3D8%26CN%3D61",
  "policy_title": "CityLink Melbourne Limited",
  "policy_url": "citylink.com.au/content/privacy/feature.asp?CC=8&CN=61",
  "sha1": "c31f5e815091fba8c2976b42139b5f093ea78567",
  "simhash": 11594585945874301238,
  "simhash_updated": false,
  "site_hostname": "citylink.com.au",
  "site_url": "http://citylink.com.au",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041208021016",
  "word_count": 589,
  "year": 2004
}

--- a/c/ci/cit/citylink.com.au.html
+++ b/c/ci/cit/citylink.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the citylink.com.au privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606044804id_/http%3A//www.transurban.com.au/content/privacy/feature.asp%3FCC%3D8%26CN%3D61) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the citylink.com.au privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208021016id_/http%3A//www.citylink.com.au/content/privacy/feature.asp%3FCC%3D8%26CN%3D61) for the most accurate reproduction.-->
 
 <html><head>
 <link rel="stylesheet" type="text/css" href="/include/transurban.css">
@@ -34,7 +34,7 @@
 	
 			<table cellpadding="0" cellspacing="0" border="0" width="100%" bgcolor="#ffffff">
 			<tbody><tr>
-				<td width="181"><a href="http://www.transurban.com.au/default.asp"><img src="/images/tu_logo.gif" alt="Back to CityLink homepage" border="0" width="181" height="65"></a></td>
+				<td width="181"><a href="http://www.citylink.com.au/default.asp"><img src="/images/tu_logo.gif" alt="Back to CityLink homepage" border="0" width="181" height="65"></a></td>
 				<td width="100%" align="right"><img src="/resources/images/210_811200313221.GIF"></td>			
 			</tr>
 			</tbody></table>
@@ -168,7 +168,7 @@
 	</script>
 	
 		<table cellpadding="2" cellspacing="0" border="0" width="100">
-		<form method="post" action="https://www.transurban.com.au/content/privacy/feature.asp?CC=8&amp;CN=61" id="form2" name="form2"></form>
+		<form method="post" action="https://www.citylink.com.au/content/privacy/feature.asp?CC=8&amp;CN=61" id="form2" name="form2"></form>
 		<tbody><tr>
 			<td colspan="3"><img src="/images/spacer.gif" height="1" width="154"></td>
 		</tr>
@@ -191,7 +191,7 @@
 		</tr>
 			<tr>
 				<td><img src="/images/spacer.gif" height="1" width="10"></td>
-				<td align="center"><a class="Navigation" href="https://www.transurban.com.au/content/logon/recover.asp?CC=56&amp;CN=114">Recover PIN</a><img src="/images/spacer.gif" height="1" width="10"></td>
+				<td align="center"><a class="Navigation" href="https://www.citylink.com.au/content/logon/recover.asp?CC=56&amp;CN=114">Recover PIN</a><img src="/images/spacer.gif" height="1" width="10"></td>
 				<td><img src="/images/spacer.gif" height="1" width="10"></td>
 			</tr>
 		
@@ -278,46 +278,7 @@
 	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
 	<td class="TDNav" valign="top"><img src="/images/mouse_out.gif" height="11" width="12" name="menu11"></td>
 	<td class="TDNav" valign="top" align="left">
-<a onmouseover="mouseOver('11')" onmouseout="mouseOut('11')" class="Navigation" href="http://www.transurban.com.au/default.asp?CC=33&amp;CN=92">Home</a><br>	</td>
-	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
-</tr>
-<tr>
-	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
-	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
-	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
-	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
-</tr>
-<tr>
-	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
-	<td class="TDNav" valign="top"><img src="/images/mouse_out.gif" height="11" width="12" name="menu12"></td>
-	<td class="TDNav" valign="top" align="left">
-<a onmouseover="mouseOver('12')" onmouseout="mouseOut('12')" class="Navigation" href="http://www.transurban.com.au/content/using/feature.asp?CC=19&amp;CN=76">Using CityLink</a><br>	</td>
-	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
-</tr>
-<tr>
-	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
-	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
-	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
-	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
-</tr>
-<tr>
-	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
-	<td class="TDNav" valign="top"><img src="/images/mouse_out.gif" height="11" width="12" name="menu13"></td>
-	<td class="TDNav" valign="top" align="left">
-<a onmouseover="mouseOver('13')" onmouseout="mouseOut('13')" class="Navigation" href="http://www.transurban.com.au/content/brochure/default.asp?CC=43&amp;CN=101">Brochure library</a><br>	</td>
-	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
-</tr>
-<tr>
-	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
-	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
-	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
-	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
-</tr>
-<tr>
-	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
-	<td class="TDNav" valign="top"><img src="/images/mouse_out.gif" height="11" width="12" name="menu14"></td>
-	<td class="TDNav" valign="top" align="left">
-<a onmouseover="mouseOver('14')" onmouseout="mouseOut('14')" class="Navigation" href="http://www.transurban.com.au/content/about/feature.asp?CC=7&amp;CN=52">Company information</a><br>	</td>
+<a onmouseover="mouseOver('11')" onmouseout="mouseOut('11')" class="Navigation" href="http://www.citylink.com.au/default.asp?CC=33&amp;CN=92">Home</a><br>	</td>
 	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
 </tr>
 <tr>
@@ -330,7 +291,72 @@
 	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
 	<td class="TDNav" valign="top"><img src="/images/mouse_out.gif" height="11" width="12" name="menu15"></td>
 	<td class="TDNav" valign="top" align="left">
-<a onmouseover="mouseOver('15')" onmouseout="mouseOut('15')" class="Navigation" href="https://www.transurban.com.au/content/genericpayments/topup.asp?CC=82&amp;CN=139">Account Topup</a><br>	</td>
+<a onmouseover="mouseOver('15')" onmouseout="mouseOut('15')" class="Navigation" href="http://www.citylink.com.au/content/using/feature.asp?CC=19&amp;CN=76">Using CityLink</a><br>	</td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
+</tr>
+<tr>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+</tr>
+<tr>
+	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
+	<td class="TDNav" valign="top"><img src="/images/mouse_out.gif" height="11" width="12" name="menu16"></td>
+	<td class="TDNav" valign="top" align="left">
+<a onmouseover="mouseOver('16')" onmouseout="mouseOut('16')" class="Navigation" href="http://www.citylink.com.au/content/about/feature.asp?CC=7&amp;CN=52">Company information</a><br>	</td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
+</tr>
+<tr>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+</tr>
+<tr>
+	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
+	<td class="TDNav" valign="top"><img src="/images/mouse_out.gif" height="11" width="12" name="menu17"></td>
+	<td class="TDNav" valign="top" align="left">
+<a onmouseover="mouseOver('17')" onmouseout="mouseOut('17')" class="Navigation" href="http://www.citylink.com.au/content/brochure/default.asp?CC=43&amp;CN=101">Brochure library</a><br>	</td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
+</tr>
+<tr>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+</tr>
+<tr>
+	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
+	<td class="TDNav" valign="top"><img src="/images/mouse_out.gif" height="11" width="12" name="menu18"></td>
+	<td class="TDNav" valign="top" align="left">
+<a onmouseover="mouseOver('18')" onmouseout="mouseOut('18')" class="Navigation" href="http://www.citylink.com.au/content/ombudsman/default.asp?CC=93&amp;CN=143">Charter and ombudsman</a><br>	</td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
+</tr>
+<tr>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+</tr>
+<tr>
+	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
+	<td class="TDNav" valign="top"><img src="/images/mouse_out.gif" height="11" width="12" name="menu19"></td>
+	<td class="TDNav" valign="top" align="left">
+<a onmouseover="mouseOver('19')" onmouseout="mouseOut('19')" class="Navigation" href="http://www.citylink.com.au/content/SMS/SMSInfoWrapper.asp?CC=101&amp;CN=152">SMS</a><br>	</td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
+</tr>
+<tr>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+	<td class="TDNav"><img src="/images/spacer.gif" height="8" width="1"></td>
+</tr>
+<tr>
+	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
+	<td class="TDNav" valign="top"><img src="/images/mouse_out.gif" height="11" width="12" name="menu20"></td>
+	<td class="TDNav" valign="top" align="left">
+<a onmouseover="mouseOver('20')" onmouseout="mouseOut('20')" class="Navigation" href="https://www.citylink.com.au/content/genericpayments/topup.asp?CC=82&amp;CN=139">Account Topup</a><br>	</td>
 	<td class="TDNav"><img src="/images/spacer.gif" height="1" width="1"></td>
 </tr>
 </tbody></table>
@@ -345,7 +371,7 @@
 	<td class="TDNav" width="5"><img src="/images/spacer.gif" height="1" width="5"></td>
 	<td class="TDNav" valign="top"><img src="/images/mouse_out.gif" height="11" width="12" name="menu92"></td>
 	<td class="TDNav" width="138" valign="top" align="left">
-<a onmouseover="mouseOver('92')" onmouseout="mouseOut('92')" class="NavigationMinor" href="http://www.transurban.com.au/content/media/default.asp?CC=6&amp;CN=50">Media area</a>	</td>
+<a onmouseover="mouseOver('92')" onmouseout="mouseOut('92')" class="NavigationMinor" href="http://www.citylink.com.au/content/media/default.asp?CC=6&amp;CN=50">Media area</a>	</td>
 	<td class="TDNav" width="5"><img src="/images/spacer.gif" height="1" width="5"></td>
 </tr>
 <tr>
@@ -355,7 +381,7 @@
 	<td class="TDNav" width="5"><img src="/images/spacer.gif" height="1" width="5"></td>
 	<td class="TDNav" valign="top"><img src="/images/mouse_over.gif" height="11" width="12" name="menu93"></td>
 	<td class="TDNav" width="138" valign="top" align="left">
-<a onmouseover="mouseOver('93')" onmouseout="mouseOut('93')" class="Navigation" href="http://www.transurban.com.au/content/privacy/feature.asp?CC=8&amp;CN=51">Privacy</a>	</td>
+<a onmouseover="mouseOver('93')" onmouseout="mouseOut('93')" class="Navigation" href="http://www.citylink.com.au/content/privacy/feature.asp?CC=8&amp;CN=51">Privacy</a>	</td>
 	<td class="TDNav" width="5"><img src="/images/spacer.gif" height="1" width="5"></td>
 </tr>
 <tr>
@@ -365,7 +391,7 @@
 	<td class="TDNav" width="5"><img src="/images/spacer.gif" height="1" width="5"></td>
 	<td class="TDNav" valign="top"><img src="/images/mouse_out.gif" height="11" width="12" name="menu94"></td>
 	<td class="TDNav" width="138" valign="top" align="left">
-<a onmouseover="mouseOver('94')" onmouseout="mouseOut('94')" class="NavigationMinor" href="http://www.transurban.com.au/content/contactus/default.asp?CC=4&amp;CN=54">Contact us</a>	</td>
+<a onmouseover="mouseOver('94')" onmouseout="mouseOut('94')" class="NavigationMinor" href="http://www.citylink.com.au/content/contactus/default.asp?CC=4&amp;CN=54">Contact us</a>	</td>
 	<td class="TDNav" width="5"><img src="/images/spacer.gif" height="1" width="5"></td>
 </tr>
 <tr>
@@ -504,9 +530,10 @@ information about these issues. This page provides a brief summary about your
 privacy as a CityLink customer and the way that CityLink collects, uses and 
 handles your personal information. If you are interested in these issues, you 
 can read more in the Privacy Code.</p>
-</a><p><a class="ContentAbstract">Alternatively, if you want to ask us anything in particular about how we 
-protect your privacy, you can </a><a class="Link" href="/content/contactus/default.asp">contact us</a><a class="ContentAbstract"> or 
-call 13 26 29.</a></p>
+</a><p><a class="ContentAbstract">Alternatively, if you want to ask us anything in 
+particular about how we protect your privacy, you can contact us by 
+emailing&nbsp;assist@citylink.com.au or by calling&nbsp;</a><a class="ContentAbstract">  
+ 13 26 29.</a></p>
 <a class="ContentAbstract">
 <p><b>Your CityLink Account details</b></p>
 <p>We require the personal details that you provide on your CityLink Account 
@@ -571,7 +598,7 @@ this information is incorrect, please contact us via email or phone 13 26 29.
 	<td><img src="/images/spacer.gif" height="1" width="1"></td>
 </tr>
 <tr>
-	<td width="100%" valign="top" align="center"><a class="LinkFooter" href="http://www.transurban.com.au/content/privacy/feature.asp?CC=8&amp;CN=61">Privacy</a>&nbsp;|&nbsp;<a class="LinkFooter" href="http://www.transurban.com.au/content/help/feature.asp?CC=3&amp;CN=58">Help</a>&nbsp;|&nbsp;<a class="LinkFooter" href="http://www.transurban.com.au/content/contactus/default.asp?CC=4&amp;CN=60">Contact us</a>&nbsp;|&nbsp;<a class="LinkFooter" href="http://www.transurban.com.au/default.asp?CC=1&amp;CN=80">Home</a></td>
+	<td width="100%" valign="top" align="center"><a class="LinkFooter" href="http://www.citylink.com.au/content/privacy/feature.asp?CC=8&amp;CN=61">Privacy</a>&nbsp;|&nbsp;<a class="LinkFooter" href="http://www.citylink.com.au/content/help/feature.asp?CC=3&amp;CN=58">Help</a>&nbsp;|&nbsp;<a class="LinkFooter" href="http://www.citylink.com.au/content/contactus/default.asp?CC=4&amp;CN=60">Contact us</a>&nbsp;|&nbsp;<a class="LinkFooter" href="http://www.citylink.com.au/default.asp?CC=1&amp;CN=80">Home</a></td>
 </tr>
 <tr>
 	<td align="center"><a class="ContentWhite"><br>® Registered trademark of CityLink Melbourne Limited. ABN&nbsp;65&nbsp;070&nbsp;810&nbsp;678</a></td>
