--- a/a/al/all/allaboutdance.com.html
+++ b/a/al/all/allaboutdance.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the allaboutdance.com privacy policy that was archived on 2004-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040611050637id_/http%3A//www.allaboutdance.com/Merchant2/merchant.mvc%3FScreen%3DPRIVACY) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the allaboutdance.com privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208021338id_/http%3A//www.allaboutdance.com/Merchant2/merchant.mvc%3FScreen%3DPRIVACY) for the most accurate reproduction.-->
 
-<html><head><title>Privacy Information</title><meta http-equiv="Content-Language" content="en-us"><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><meta name="Author" content="AllAboutDance.com"><meta name="description" content="AllAboutDance.com"><meta name="copyright" content="Copyright (c)2003 AllAboutDance.com.  All rights reserved.">
+<html><head><title>Privacy Information</title><meta http-equiv="Content-Language" content="en-us"><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><meta name="Author" content="AllAboutDance.com"><meta name="description" content="AllAboutDance.com  at discount prices"><meta name="copyright" content="Copyright (c)2003 AllAboutDance.com.  All rights reserved.">
 <base href="http://www.allaboutdance.com/Merchant2/"><link href="style.css" rel="stylesheet" type="text/css">
 <script src="/__utm.js" type="text/javascript"></script></head>
 <body bgcolor="#FFFFFF" text="#000000" link="#993366" alink="#6666CC" vlink="#993366"><table border="0" cellpadding="0" cellspacing="0" width="100%" valign="bottom">
@@ -26,25 +26,23 @@
 </tr>
 </tbody></table><table border="0" cellpadding="0" cellspacing="0" width="100%">
 
-<tbody><tr bgcolor="#FF9999"><td colspan="3" width="100%"><table border="0" bgcolor="#FF9999" cellpadding="4" cellspacing="0" background="" width="100%"><tbody><tr><td width="1%">&nbsp;</td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
-<img src="../images/home.gif"></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
-<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=SFNT" class="header"> <b>Home</b></a></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
-<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=SRCHM" class="header"> | <b>Search</b></a></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
-<a href="https://www.allaboutdance.com/Merchant2/merchant.mvc?Session_ID=41ea9d8b5d56488bf030ee876d319345&amp;Screen=LOGN" class="header"> | <b>Your Account</b></a></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
-<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=FAQ" class="header">| <b>FAQ</b></a></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
-<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=TRACKING" class="header"> | <b>Track Your Order</b></a></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
-<a href="http://server.iad.liveperson.net/hc/27127620/?cmd=file&amp;file=visitorWantsToChat&amp;site=27127620&amp;byhref=1" target="chat27127620" onclick="javascript:window.open('http://server.iad.liveperson.net/hc/27127620/?cmd=file&amp;file=visitorWantsToChat&amp;site=27127620&amp;referrer='+document.location,'chat27127620','width=472,height=320');return false;" class="header"> | <b>Live Help</b></a></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
-<img src="../images/chat/dance-help.gif"></font></td><td width="99%" align="center" nowrap=""><font face="" size="" color="">
+<tbody><tr bgcolor="#FF9999"><td colspan="3" width="100%"><table border="0" bgcolor="#FF9999" cellpadding="4" cellspacing="0" background="" width="100%"><tbody><tr><td width="1%" align="center" nowrap=""><font face="" size="" color="">
+<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=SFNT" class="medheader"> <b>Home</b></a></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
+<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=SRCHM" class="medheader">| <b>Search</b></a></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
+<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=FAQ" class="medheader">| <b>FAQ</b></a></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
+<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=TRACKING" class="medheader"> | <b>Track Your Order</b></a></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
+<a href="http://server.iad.liveperson.net/hc/27127620/?cmd=file&amp;file=visitorWantsToChat&amp;site=27127620&amp;byhref=1" target="chat27127620" onclick="javascript:window.open('http://server.iad.liveperson.net/hc/27127620/?cmd=file&amp;file=visitorWantsToChat&amp;site=27127620&amp;referrer='+document.location,'chat27127620','width=472,height=320');return false;" class="medheader"> | <b>Live Help</b></a></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
+<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=CATALOG" class="medheader">| <b>Free Catalog</b></a></font></td><td width="99%" align="center" nowrap=""><font face="" size="" color="">
 &nbsp;</font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
 <img src="../images/cart.gif"></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
-<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=BASK" class="header"><b>Shopping Cart</b></a></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
-<a href="https://www.allaboutdance.com/Merchant2/merchant.mvc?Session_ID=41ea9d8b5d56488bf030ee876d319345&amp;Screen=LOGN&amp;Order=1" class="header"> | <b>Secure Checkout</b></a></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
-<img src="../images/secure.gif"></font></td><td width="1%">&nbsp;</td></tr></tbody></table></td></tr><tr>
+<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=BASK" class="medheader"><b>Shopping Cart</b></a></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
+<a href="https://www.allaboutdance.com/Merchant2/merchant.mvc?Session_ID=cbefa2a33add45eff6f417e85606c085&amp;Screen=LOGN&amp;Order=1" class="medheader"> | <b>Secure Checkout</b></a></font></td><td width="1%" align="center" nowrap=""><font face="" size="" color="">
+<img src="../images/secure.gif"></font></td></tr></tbody></table></td></tr><tr>
 
 
 
 <td align="left" valign="top" bgcolor="#DDDDDD"><table border="0" cellpadding="10" cellspacing="0"><tbody><tr><td align="left" valign="top" nowrap=""><font face="Verdana, Arial, Helvetica" size="1">
-<a href="https://www.allaboutdance.com/Merchant2/merchant.mvc?Session_ID=41ea9d8b5d56488bf030ee876d319345&amp;Screen=LOGN&amp;Order=0">Account Members Sign-In</a><br><br> 
+<a href="https://www.allaboutdance.com/Merchant2/merchant.mvc?Session_ID=cbefa2a33add45eff6f417e85606c085&amp;Screen=LOGN&amp;Order=0">Account Members Sign-In</a><br><br> 
 <br><font size="2">
 <b>Categories</b>
 <br>
@@ -105,16 +103,16 @@ we will post any changes on this page so that you are always aware of the inform
 </blockquote>
 
 
-</td><td align="left" valign="top"><font></font></td></tr></tbody></table>
-<table width="100%" bgcolor="#FF9999" cellpadding="4"><tbody><tr><td align="left" bgcolor="#FF9999"><b>
-<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=SFNT" class="header"><img src="../images/home.gif" border="0"> Home</a>
-<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=SRCHM" class="header"> | Search</a>
-<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=FAQ" class="header"> | FAQ</a>
-<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=TRACKING" class="header"> | Track Your Order</a>
-<a href="http://server.iad.liveperson.net/hc/27127620/?cmd=file&amp;file=visitorWantsToChat&amp;site=27127620&amp;byhref=1" target="chat27127620" onclick="javascript:window.open('http://server.iad.liveperson.net/hc/27127620/?cmd=file&amp;file=visitorWantsToChat&amp;site=27127620&amp;referrer='+document.location,'chat27127620','width=472,height=320');return false;" class="header"> | Live Help <img src="../images/chat/dance-help.gif" border="0"></a></b>
+</td><td align="left" valign="top"><font></font></td></tr></tbody></table><table width="100%" bgcolor="#FF9999" cellpadding="4"><tbody><tr><td align="left" bgcolor="#FF9999"><b>
+<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=SFNT" class="medheader">Home</a>
+<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=SRCHM" class="medheader"> | Search</a>
+<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=FAQ" class="medheader"> | FAQ</a>
+<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=TRACKING" class="medheader"> | Track Your Order</a>
+<a href="http://server.iad.liveperson.net/hc/27127620/?cmd=file&amp;file=visitorWantsToChat&amp;site=27127620&amp;byhref=1" target="chat27127620" onclick="javascript:window.open('http://server.iad.liveperson.net/hc/27127620/?cmd=file&amp;file=visitorWantsToChat&amp;site=27127620&amp;referrer='+document.location,'chat27127620','width=472,height=320');return false;" class="medheader"> | Live Help</a>
+<a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=CATALOG" class="medheader"> | Free Catalog</a></b>
 </td><td align="right" bgcolor="#FF9999">
-<b><a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=BASK" class="header"><img src="../images/cart.gif" border="0"> Shopping Cart</a>
-<a href="https://www.allaboutdance.com/Merchant2/merchant.mvc?Session_ID=41ea9d8b5d56488bf030ee876d319345&amp;Screen=LOGN&amp;Order=1" class="header"> | Secure Checkout <img src="../images/secure.gif" border="0"></a>
+<b><a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=BASK" class="medheader"><img src="../images/cart.gif" border="0"> Shopping Cart</a>
+<a href="https://www.allaboutdance.com/Merchant2/merchant.mvc?Session_ID=cbefa2a33add45eff6f417e85606c085&amp;Screen=LOGN&amp;Order=1" class="medheader"> | Secure Checkout <img src="../images/secure.gif" border="0"></a>
 
 </b>&nbsp;&nbsp;</td></tr></tbody></table>
 <br><center>
@@ -125,9 +123,8 @@ we will post any changes on this page so that you are always aware of the inform
 <a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=PRIVACY">Privacy Policy</a> |
 <a href="http://www.allaboutdance.com/Merchant2/merchant.mvc?Screen=FAQ">FAQ</a>
 <br><br>Questions, Comments? Call us toll-free: 1-800-775-0578
-<br><br><span class="small">Copyright 2003 AllAboutDance.com - All rights reserved.</span></center>
+<br><br><span class="small">Copyright 2004 AllAboutDance.com - All rights reserved.</span></center>
 <!-- BEGIN HumanTag Monitor. DO NOT MOVE! MUST BE PLACED JUST BEFORE THE /BODY TAG --><script language="javascript" src="http://server.iad.liveperson.net/hc/27127620/x.js?cmd=file&amp;file=chatScript3&amp;site=27127620&amp;category=en;woman;1"> </script><!-- END HumanTag Monitor. DO NOT MOVE! MUST BE PLACED JUST BEFORE THE /BODY TAG -->
-
 
 
 
@@ -135,7 +132,7 @@ we will post any changes on this page so that you are always aware of the inform
 <osv version="4.914">
 <mmv version="4.22">
 <mv version="Redirect/4.1400">
-<ot time="2926u">
-<tt time="3626u">
+<ot time="8998u">
+<tt time="01s2086u">
 
 </tt></ot></mv></mmv></osv></ov></body></html>
