aftercollege.com (archived on 2004-12-08)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;jobrelated",
  "char_count": 3885,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.24,
  "homepage_snapshot_redirected_domain": "aftercollege.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001033943id_/http://www.aftercollege.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001033943id_/http%3A//aftercollege.com",
  "interval": "2004_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "aftercollege.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041208021923id_/http%3A//www.aftercollege.com/privacy.asp",
  "policy_title": "AfterCollege - Redefining College Recruiting",
  "policy_url": "aftercollege.com/privacy.asp",
  "sha1": "a806d0f784c7a59d661e7c0118d002a9c06a43eb",
  "simhash": 355002708048891052,
  "simhash_updated": false,
  "site_hostname": "aftercollege.com",
  "site_url": "http://aftercollege.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041208021923",
  "word_count": 618,
  "year": 2004
}

--- a/a/af/aft/aftercollege.com.html
+++ b/a/af/aft/aftercollege.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the aftercollege.com privacy policy that was archived on 2004-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040611051328id_/http%3A//aftercollege.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the aftercollege.com privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208021923id_/http%3A//www.aftercollege.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>AfterCollege - Redefining College Recruiting</title>
@@ -158,19 +158,7 @@ function MM_swapImage() { //v3.0
       </td>
 </tr>
 
-<tr>
-    <td colspan="4"><img height="4" src="/look/images/transparent-gif1-1.gif" width="187"></td>
-</tr>
 
-<tr>
-    <td colspan="4"><a onmouseover="MM_swapImage('about us','','/look/images/about-alt.gif',1)" onmouseout="MM_swapImgRestore()" href="/about.asp"><img height="20" alt="About AfterCollege" src="/look/images/about-after.gif" width="187" border="0" name="about us"></a></td>
-</tr>
-<tr>
-    <td colspan="4"><img height="1" src="/look/images/transparent-gif1-1.gif" width="187"></td>
-</tr>
-<tr>
-    <td colspan="4"><a onmouseover="MM_swapImage('contact','','/look/images/contact-alt.gif',1)" onmouseout="MM_swapImgRestore()" href="/contact.asp"><img height="20" alt="Contact Us" src="/look/images/contact.gif" width="187" border="0" name="contact"></a></td>
-</tr>
 <tr>
     <td colspan="4"><img height="1" src="/look/images/transparent-gif1-1.gif" width="187"></td>
 </tr>
