--- a/c/cl/cli/clickthru.com.html
+++ b/c/cl/cli/clickthru.com.html
@@ -1,16 +1,16 @@
-<!--The following is the downloaded HTML source of the clickthru.com privacy policy that was archived on 2002-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20021211161756id_/http%3A//www.clickthru.com/faq%3Ffaq%3D6%26refresh%3D%252F) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the clickthru.com privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208024404id_/http%3A//www.clickthru.com/faq%3Ffaq%3D6%26refresh%3D%252F) for the most accurate reproduction.-->
 
 <html><head>
 		
-		<title>ClickThru.com Help</title>
+		<title>ClickThru.com</title>
 		<base href="http://www.clickthru.com/" target="_self">
 		<link rel="STYLESHEET" type="text/css" href="inc/styles.css">
 		<script language="JavaScript1.2" src="inc/global.js" type="text/javascript"></script>
 		
 		</head>
 
-		<body topmargin="0" leftmargin="0" marginwidth="0" marginheight="0" bgcolor="#ffffff">
+		<body topmargin="0" leftmargin="0" marginwidth="0" marginheight="0" bgcolor="#ffffff" onclick="hideHelp()">
 		<table cellpadding="0" cellspacing="0" border="0" bgcolor="#ffffff" width="100%" height="100%">
 		<tbody><tr>	<td colspan="3" bgcolor="#165794" height="18" align="right">&nbsp;&nbsp;</td></tr>
 		<tr>	<td width="18" bgcolor="#165794"><img src="img/spc.gif"></td>
@@ -19,7 +19,7 @@
 			</tr>
 		<tr>	<td bgcolor="#165794">&nbsp;</td>
 			<td width="5"><img src="img/spc.gif"></td>
-			<td valign="top" style="padding:10pt"><div class="big"><font color="#2F2FB7" size="+3"><u>Privacy</u></font><span class="tiny"><br></span><b>ClickThru.com Privacy Policy</b>
+			<td valign="top" style="padding:10pt"><div><font color="#2F2FB7" size="+3"><u>Privacy</u></font><span class="tiny"><br></span><small><b>ClickThru.com Privacy Policy</b>
 <p>The following Privacy statement details the practices and policies of ClickThru, Inc., owner and operator of ClickThru.com:
 </p><p>
 ClickThru may collect any or all of the following information:
@@ -40,7 +40,7 @@ the privacy practices or the content of Web sites to which we may link.
 <span class="big"><b>Security / Financial Information </b></span><br>
 Any Financial information that is collected is used solely to bill the user for products and services authorized by the user.
 Credit Card and Bank Account information is collected only over secure SSL Encrypted internet connections.
-No personal financial information is stored on ClickThru web servers.
+Credit card numbers and other personal financial information are NOT stored permanently on ClickThru web servers.
 
 </p><p>
 <span class="big"><b>Opting-Out </b></span><br>
@@ -54,30 +54,21 @@ Any ClickThru users may opt-out of receiving regular e-mails by one of the follo
 This site gives users the following options for changing and modifying information previously provided. 
 <ul>
 	<li>Adjust OPTIONAL personal interest profile at http://www.clickthru.com/favorites</li>
-	<li>Contact support at: http://www.clickthru.com/support</li>
+	<li>Contact support at: http://www.clickthru.com/messages?b=New</li>
 </ul>
-<script>
-<!--
-	if(window.history.length)
-	document.write('<p><SPAN><input class=butn type=Image SRC="but/goback.gif" border=0 width=80 height=16 name=back value="Go Back" onClick="window.history.go(-1)"></SPAN>');
-//-->
-</script><p><span><input class="butn" type="Image" src="but/goback.gif" border="0" width="80" height="16" name="back" value="Go Back" onclick="window.history.go(-1)"></span>
-	</p></div><br>			<table cellpadding="0" cellspacing="0" border="0" width="99%" bgcolor="#cccccc">
-			<tbody><tr><td bgcolor="#ffffff" align="center"><div class="sectsmall"></div></td></tr>
-			<tr><td><div style="border-top: 1px solid gray; border-bottom: 1px solid gray;">		<table cellpadding="5" cellspacing="0" border="0" width="100%">
+</small></div><br><div>		<div class="sectsmall">Search for More Help:</div>
+		<table class="small" cellpadding="5" cellspacing="0" border="0" width="100%">
 		<form action="faq" method="post" target="CTNhelp"></form>
-		<tbody><tr><td bgcolor="#165794" class="lt"><b>Search for More Help</b></td></tr>
-		<tr><td>
+		<tbody><tr><td class="bd" style="background:#F3E8E3;">
 		<b>Type a question below:</b><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;<input type="Text" name="ask" value="" size="30">
-		<span><span><input type="Image" src="but/search.gif" width="60" height="16" border="0" alt="Search" class="butn"></span></span>
-		<br><small><i>Example: <i>What is ClickThru Cash?</i></i></small><i><br>
+		&nbsp;&nbsp;&nbsp;&nbsp;<input type="Text" name="ask" value="" size="30"><input type="submit" value="Search"><br>
+		<small><i>Example: <i>What is ClickThru Cash?</i></i></small><i><br>
 		<input type="hidden" name="ns" value="">
 		<input type="hidden" name="popup" value="">
 		</i></td></tr>
 		
-		</tbody></table>			</div></td></tr>
-			</tbody></table>				</td>
+		</tbody></table>
+	</div>				</td>
 			</tr>
 		</tbody></table>
 	</body></html>
