--- a/c/co/coo/coolhomepages.com.html
+++ b/c/co/coo/coolhomepages.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the coolhomepages.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606102217id_/http%3A//www.coolhomepages.com/html/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the coolhomepages.com privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208030916id_/http%3A//coolhomepages.com/html/privacypolicy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Cool Home Pages - Web Site Design Examples, Gallery and Templates</title>
