--- a/c/ce/cel/cellularsouth.com.html
+++ b/c/ce/cel/cellularsouth.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cellularsouth.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602190651id_/http%3A//cellularsouth.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cellularsouth.com privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208032054id_/http%3A//www.cellularsouth.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/templates/about.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <script>
